--- a/Minimize and reboot/readme
+++ b/Minimize and reboot/readme
@@ -1,1 +1,1 @@
-This SCript was submitted by mithandirsghost as a work around for not being allowed to force a reboot. This script minimizes all windoes and asks users if they would like to reboot. If running with PDQ, make sure it runs as logged on user so the message box can pop up for them to see,
+This Script was submitted by mithandirsghost as a work around for not being allowed to force a reboot. This script minimizes all windoes and asks users if they would like to reboot. If running with PDQ, make sure it runs as logged on user so the message box can pop up for them to see,
